--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,11 @@
 
 
 :root {
-    --primary-color: #76fb71;
-    --footer-color: #3b9b41;
-    --span-color: #fde047;
-    --section-color: #4ade80;
+    --primary-color: #894ef7;
+    --footer-color: #ccc2f1;
+    --span-color: #ef2d1b;
+    --section-color: #4d10db;
 }
-p{
-    text-align: justify;
-}
-
 hr {
     margin: 2rem 0rem;
 }
@@ -19,16 +15,17 @@ body {
     font-family: 'Sans Pro', sans-serif;
     margin: 0px;
     overflow-x: hidden;
+    text-align: justify;
+    background-color:whitesmoke;
 }
 .navigation {
     padding: 1rem;
     background-color: var(--primary-color);
     color: var(--span-color);
     font-size: large;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    display: flex;
-    flex-wrap: wrap;
+    /* border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;*/
+    display: flex; 
     justify-content: space-between;
     align-items: center;
 }
@@ -45,11 +42,32 @@ body {
 
 .nav-link {
     background-color: var(--primary-color);
+    font-size: medium;
+    font-weight: bold;
     color: var(--span-color);
     border: 1px solid var(--span-color);
     padding: 0.5rem 0.5rem;
     text-decoration: none;
     border-radius: 0.5rem;
     margin: 0.5rem;
-
+}
+.block{
+    text-align: center;
+    padding:2rem;
+    display: block;
+    margin: auto;
+    background-color: whitesmoke; 
+}
+.div1-normal{
+    background-color:var(--footer-color);
+}
+.block-header{
+    text-align: center;
+    font-size:x-large;
+}
+.header{
+    text-align: center;
+    padding:2rem;
+    display: block;
+    margin: auto;
 }
